# harmonia

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  codecov.yml  default.nix  devShell.nix  flake.nix  herculesCI.nix  module.nix  package.nix  packages.nix  result  shell.nix
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/aterm_parse/: 0009mzn7r248qsjx5arqbvscizgpn7gr-bidipresentation.r35267.tar.xz.drv  000b891ixflrvvzg65b32gr4jpzf91qj-darwin-bsd-binary-paths.patch.drv  000cf416hxviw24ji9n0g346zk6p8hax-cryptsetup-2.8.3.tar.xz.drv  aaak091i4cfj35w8gl43m65nv9r21ir4-bidipresentation.r35267.tar.xz.drv  aaamjkbv8qz4669rhgmdcr4fw29qkb3w-darwin-bsd-binary-paths.patch.drv  aaanqfbhs86v7cfwvk1ardfh9xh2jsl8-cryptsetup-2.8.3.tar.xz.drv
fuzz/fuzz_targets/: aterm_parse.rs  nar_parse.rs  protocol_request.rs
harmonia-bench/: Cargo.toml
harmonia-bench/benches/: closure_download.rs  http_download.rs  ref_scan.rs
harmonia-bench/benches/common/: mod.rs
harmonia-bench/src/: lib.rs
harmonia-cache/: Cargo.toml  README.md  build-css.sh  harmonia-grafana-dashboard.json  package-lock.json  package.json  tailwind.config.js
harmonia-cache/src/: buildlog.rs  cacheinfo.rs  config.rs  error.rs  main.rs  nar.rs  narinfo.rs  narlist.rs  prometheus.rs  realisations.rs  root.rs  serve.rs  signing.rs  store.rs  systemd.rs  template.rs  tls.rs  zstd_body.rs
harmonia-cache/src/styles/: input.css  output.css
harmonia-cache/src/templates/: base.html  directory.html  directory_row.html  landing.html  landing_with_keys.html
harmonia-cache/tests/: chroot.rs  common.rs  daemon.rs  endpoints.rs  error_responses.rs  log.rs  prometheus.rs  realisations.rs  retry.rs  security_paths.rs  security_xss.rs  signing.rs  socket_activation.rs  tls.rs  unix.rs
harmonia-daemon/: Cargo.toml  README.md
harmonia-daemon/src/: build.rs  build_users.rs  canonicalize.rs  config.rs  darwin_sandbox.rs  error.rs  export_references_graph.rs  handler.rs  hashing_reader.rs  lib.rs  linux_sandbox.rs  main.rs  pathlocks.rs  references.rs  sandbox.rs  scheduler.rs  sqlite.rs
harmonia-daemon/src/build_users/: auto_user_lock.rs  simple_user_lock.rs
harmonia-daemon/src/builtins/: buildenv.rs  fetchurl.rs  mod.rs  unpack_channel.rs
harmonia-daemon/src/server/: mod.rs
harmonia-daemon/src/tests/: add_to_store_nar.rs  add_to_store_scanning.rs  build_derivation.rs  mod.rs  query_missing.rs  sqlite_nix_store.rs  submit_output.rs  test_store.rs
harmonia-file-core/: Cargo.toml  README.md
harmonia-file-core/src/: canon_path.rs  lib.rs  listing.rs  serde_impl.rs  sink.rs  source.rs  tests.rs
harmonia-file-core/tests/json_upstream/: mod.rs
harmonia-file-fd/: Cargo.toml  README.md
harmonia-file-fd/src/: cap.rs  lib.rs  mmap.rs  sink.rs  source.rs
harmonia-file-io-pure/: Cargo.toml  README.md
harmonia-file-io-pure/src/: lib.rs  listing.rs  serde_impl.rs  sink.rs  source.rs  tests.rs
harmonia-file-nar/: Cargo.toml  README.md
harmonia-file-nar/src/: lib.rs  listing.rs
harmonia-file-nar/src/archive/: byte_stream.rs  dumper.rs  mod.rs  parser.rs  radix_tree.rs  restorer.rs
harmonia-file-nar/src/test/: mod.rs
harmonia-nar/: Cargo.toml  README.md
harmonia-nar/src/: lib.rs  padded_reader.rs
harmonia-nar/src/archive/: byte_stream.rs  dumper.rs  mmap.rs  mod.rs  parser.rs  read_nar.rs  restorer.rs  writer.rs
harmonia-protocol/: Cargo.toml  README.md
harmonia-protocol-derive/: Cargo.toml  README.md
harmonia-protocol-derive/src/: lib.rs  ser.rs
harmonia-protocol/src/: aterm.rs  build_result.rs  lib.rs  log.rs  nar_hash.rs  store_impls.rs  store_ops.rs  types.rs  valid_path_info.rs  version.rs  wire_roundtrip.rs
harmonia-protocol/src/de/: int.rs  (+5 more)
harmonia-ssh-store/: Cargo.toml  README.md
harmonia-ssh-store/src/: lib.rs
harmonia-store-aterm/: Cargo.toml
harmonia-store-aterm/src/: error.rs  input_address.rs  lib.rs  parser.rs  printer.rs  raw_output.rs
harmonia-store-aterm/tests/: roundtrip.rs  upstream_drv.rs
harmonia-store-build-result/: Cargo.toml
harmonia-store-build-result/src/: lib.rs
harmonia-store-content-address/: Cargo.toml  README.md
harmonia-store-content-address/src/: lib.rs  to_store_path.rs  types.rs
harmonia-store-core/: CHANGELOG.md  Cargo.toml  README.md
harmonia-store-core-legacy/: Cargo.toml
harmonia-store-core-legacy/src/: fingerprint.rs  hash.rs  lib.rs  signing.rs  store_path.rs
harmonia-store-core/src/: base.rs  base32.rs  build.rs  content_address.rs  drv_ref.rs  file_ingestion.rs  hash.rs  lib.rs  log.rs  placeholder.rs  realisation.rs  references.rs  signature.rs  signing.rs
harmonia-store-core/tests/: json_upstream.rs
harmonia-store-db/: Cargo.toml  README.md
harmonia-store-db/src/: connection.rs  error.rs  lib.rs  query.rs  schema.rs  types.rs  write.rs
harmonia-store-db/tests/: smoke.rs
harmonia-store-derivation/: CHANGELOG.md  Cargo.toml  README.md
harmonia-store-derivation/src/: lib.rs  placeholder.rs
harmonia-store-nar-info/: Cargo.toml
harmonia-store-nar-info/src/: lib.rs
harmonia-store-path/: Cargo.toml  README.md
harmonia-store-path-info/: Cargo.toml
harmonia-store-path-info/src/: lib.rs  nar_hash.rs
harmonia-store-path/src/: lib.rs  path.rs  store_dir.rs
harmonia-store-ref-scan/: Cargo.toml  README.md
harmonia-store-ref-scan/src/: lib.rs
harmonia-store-remote/: Cargo.toml  README.md
harmonia-store-remote-legacy/: Cargo.toml
harmonia-store-remote-legacy/src/: error.rs  tests.rs
harmonia-store-remote/src/: client.rs  error.rs  framed.rs  lib.rs  metrics.rs  operations.rs  pool.dfy  pool.rs  tests.rs
harmonia-store-remote/tests/: nix_daemon.rs
harmonia-test-utils/: Cargo.toml
harmonia-utils-base-encoding/: Cargo.toml  README.md
harmonia-utils-base-encoding/src/: base32.rs  lib.rs
harmonia-utils-hash/: Cargo.toml  README.md
harmonia-utils-hash/src/: algo.rs  borrowed.rs  context.rs  fmt.rs  hashing_reader.rs  lib.rs  owned.rs  reader.rs  sha256.rs  sink.rs  view.rs  writer.rs
harmonia-utils-io/: Cargo.toml  README.md
harmonia-utils-io/src/: lending.rs  lib.rs  unix_socket.rs
(+203 files in other folders)
