[workspace]
members = [
    "harmonia-client",
    "harmonia-utils-io",
    "harmonia-utils-base-encoding",
    "harmonia-utils-hash",
    "harmonia-store-core",
    "harmonia-store-db",
    "harmonia-store-remote",
    "harmonia-store-aterm",
    "harmonia-nar",
    "harmonia-protocol",
    "harmonia-protocol-derive",
    "harmonia-ssh-store",
    "harmonia-cache",
    "harmonia-daemon",
    "harmonia-utils-test",
    "harmonia-bench",
]
resolver = "2"

[workspace.package]
authors = [
    "Jörg Thalheim <joerg@thalheim.io>",
    "Simon Hauser <simon.hauser@helsinki-systems.de>",
    "John Ericson <John.Ericson@Obsidian.Systems>",
]
edition = "2024"
homepage = "https://github.com/nix-community/harmonia"
license = "MIT"
repository = "https://github.com/nix-community/harmonia.git"
version = "3.0.0"

[workspace.dependencies]
env_logger = { version = "0.11", default-features = false, features = [ "auto-color" ] }
hex = "0.4"
log = "0.4"
nix = { version = "0.31", features = [ "signal", "mman" ] }
prometheus = { version = "0.14", default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = [
    "sync",
    "fs",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "signal",
] }
toml = "1.1"

# Dependencies for Nix.rs import
async-stream     = "0.3"
bstr             = "1.11"
bytes            = "1.11"
data-encoding    = "2.6"
derive_more      = { version = "2.1", features = [ "display" ] }
ed25519-dalek    = "2"
futures          = "0.3"
getrandom        = "0.3"
md5              = "0.8"
memchr           = "2"
num_enum         = "0.7"
pin-project-lite = "0.2"
sha1             = "0.10"
sha2             = "0.10"
tokio-util       = "0.7"
tracing          = "0.1"
tracing-futures  = "0.2"

# Proc macro dependencies for harmonia-protocol
proc-macro2 = "1.0"
quote       = "1.0"
syn         = "2.0"

# Dev dependencies for property-based testing
hex-literal     = "1.1"
paste           = "1.0"
proptest        = "1.11"
proptest-derive = "0.8"
rstest          = "0.26"
tempfile        = "3.27"
test-log        = "0.2"
test-strategy   = "0.4"
tokio-test      = "0.4"

# Database
rusqlite = { version = "0.39", features = [ "bundled" ] }

[workspace.lints.rust]
unsafe_code = "deny"

# Patch internal crates to use local paths during development
[patch.crates-io]
harmonia-nar                 = { path = "harmonia-nar" }
harmonia-protocol            = { path = "harmonia-protocol" }
harmonia-protocol-derive     = { path = "harmonia-protocol-derive" }
harmonia-store-aterm         = { path = "harmonia-store-aterm" }
harmonia-store-core          = { path = "harmonia-store-core" }
harmonia-store-db            = { path = "harmonia-store-db" }
harmonia-store-remote        = { path = "harmonia-store-remote" }
harmonia-utils-base-encoding = { path = "harmonia-utils-base-encoding" }
harmonia-utils-hash          = { path = "harmonia-utils-hash" }
harmonia-utils-io            = { path = "harmonia-utils-io" }
harmonia-utils-test          = { path = "harmonia-utils-test" }

# Profiling profile: release optimizations with debug info for flamegraphs/perf
[profile.profiling]
debug    = true
inherits = "release"
