[workspace]
exclude = [ "fuzz" ]
members = [
    "harmonia-store-build-result",
    "harmonia-client",
    "harmonia-utils-io",
    "harmonia-utils-base-encoding",
    "harmonia-utils-hash",
    "harmonia-store-core",
    "harmonia-store-db",
    "harmonia-store-path",
    "harmonia-utils-signature",
    "harmonia-store-nar-info",
    "harmonia-store-path-info",
    "harmonia-store-remote",
    "harmonia-store-aterm",
    "harmonia-file-core",
    "harmonia-file-nar",
    "harmonia-protocol",
    "harmonia-protocol-derive",
    "harmonia-ssh-store",
    "harmonia-cache",
    "harmonia-daemon",
    "harmonia-utils-test",
    "harmonia-bench",
]
resolver = "2"

[workspace.package]
authors = [
    "Jörg Thalheim <joerg@thalheim.io>",
    "Simon Hauser <simon.hauser@helsinki-systems.de>",
    "John Ericson <John.Ericson@Obsidian.Systems>",
]
edition = "2024"
homepage = "https://github.com/nix-community/harmonia"
license = "MIT"
repository = "https://github.com/nix-community/harmonia.git"
version = "3.1.0"

[workspace.dependencies]
async-stream = "0.3"
bstr = "1.11"
bytes = "1.11"
data-encoding = "2.11"
derive_more = { version = "2.1", features = [ "display" ] }
ed25519-dalek = "2"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = { version = "0.3", features = [ "sink" ] }
getrandom = "0.4"
md5 = "0.8"
memchr = "2"
nix = { version = "0.31", features = [ "signal", "mman" ] }
num_enum = "0.7"
pin-project-lite = "0.2"
prometheus = { version = "0.14", default-features = false }
rusqlite = { version = "0.39", features = [ "bundled" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = [
    "sync",
    "fs",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "signal",
    "process",
    "test-util",
] }
tokio-util = "0.7"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

# Proc-macro toolkit (harmonia-protocol-derive)
proc-macro2 = "1.0"
quote       = "1.0"
syn         = "2.0"

# Test / dev only
hex-literal     = "1.1"
proptest        = "1.11"
proptest-derive = "0.8"
rstest          = "0.26"
tempfile        = "3.27"
tokio-test      = "0.4"

# Internal crates
harmonia-file-core           = { path = "harmonia-file-core" }
harmonia-file-nar            = { path = "harmonia-file-nar" }
harmonia-protocol            = { path = "harmonia-protocol" }
harmonia-protocol-derive     = { path = "harmonia-protocol-derive" }
harmonia-store-aterm         = { path = "harmonia-store-aterm" }
harmonia-store-build-result  = { path = "harmonia-store-build-result" }
harmonia-store-core          = { path = "harmonia-store-core" }
harmonia-store-db            = { path = "harmonia-store-db" }
harmonia-store-nar-info      = { path = "harmonia-store-nar-info" }
harmonia-store-path          = { path = "harmonia-store-path" }
harmonia-store-path-info     = { path = "harmonia-store-path-info" }
harmonia-store-remote        = { path = "harmonia-store-remote" }
harmonia-utils-base-encoding = { path = "harmonia-utils-base-encoding" }
harmonia-utils-hash          = { path = "harmonia-utils-hash" }
harmonia-utils-io            = { path = "harmonia-utils-io" }
harmonia-utils-signature     = { path = "harmonia-utils-signature" }
harmonia-utils-test          = { path = "harmonia-utils-test" }

[workspace.lints.rust]
unsafe_code = "deny"

# Profiling profile: release optimizations with debug info for flamegraphs/perf
[profile.profiling]
debug    = true
inherits = "release"
