[package]
name = "harmonia-bench"
version.workspace = true
edition.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time", "net"] }
nix.workspace = true

[[bench]]
name = "closure_download"
harness = false
