[package]
name              = "harmonia-bench"
version.workspace = true
edition.workspace = true

[dev-dependencies]
criterion          = { version = "0.8", features = [ "html_reports" ] }
nix.workspace      = true
tempfile.workspace = true
tokio              = { workspace = true, features = [ "rt-multi-thread", "time", "net", "io-util" ] }

[[bench]]
harness = false
name    = "closure_download"

[[bench]]
harness = false
name    = "http_download"
