[package]
name                 = "harmonia-cache"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme               = "README.md"

[[bin]]
name = "harmonia-cache"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.10"
actix-web = { version = "4", default-features = false, features = [ "macros", "rustls-0_23" ] }
askama_escape = "0.15.6"
async-compression = { version = "0.4.41", features = [ "tokio", "bzip2" ] }
http-range = "0.1"
mime = "0.3"
percent-encoding = "2.3.2"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = [ "io" ] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.7"
zstd = "0.13"
zstd-safe = "7"
# Nix.rs-based crates
bytes               = { workspace = true }
futures-core        = { workspace = true }
futures-util        = { workspace = true }
harmonia-nar        = { version = "3.0.0" }
harmonia-store-core = { version = "0.0.0-alpha.0" }
harmonia-store-db   = { version = "3.0.0" }
harmonia-utils-hash = { version = "0.0.0-alpha.0" }
prometheus          = { workspace = true }

[dev-dependencies]
harmonia-utils-test = { version = "0.0.0-alpha.0" }
nix                 = { workspace = true }
tempfile            = { workspace = true }
tokio               = { workspace = true, features = [ "process" ] }

[lints]
workspace = true
