[package]
name                 = "harmonia-cache"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[[bin]]
name = "harmonia-cache"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.10"
actix-web = { version = "4", default-features = false, features = [ "macros", "rustls-0_23" ] }
askama_escape = "0.16.0"
async-compression = { version = "0.4.42", features = [ "tokio", "bzip2" ] }
http-range = "0.1"
mime = "0.3"
percent-encoding = "2.3.2"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
rustls-pki-types = { version = "1", features = [ "std" ] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = [ "io" ] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.7"
zstd = "0.13"
zstd-safe = "7"
# Nix.rs-based crates
bytes                        = { workspace = true }
futures-core                 = { workspace = true }
futures-util                 = { workspace = true }
harmonia-file-core           = { workspace = true }
harmonia-file-nar            = { workspace = true }
harmonia-store-db            = { workspace = true }
harmonia-store-derivation    = { workspace = true }
harmonia-store-nar-info      = { workspace = true }
harmonia-store-path          = { workspace = true }
harmonia-store-path-info     = { workspace = true }
harmonia-utils-base-encoding = { workspace = true }
harmonia-utils-hash          = { workspace = true }
harmonia-utils-signature     = { workspace = true }
nix                          = { workspace = true, features = [ "socket", "fs" ] }
prometheus                   = { workspace = true }

[dev-dependencies]
harmonia-utils-test = { workspace = true }
nix                 = { workspace = true }
tempfile            = { workspace = true }
tokio               = { workspace = true, features = [ "process" ] }

[lints]
workspace = true
