[package]
name                 = "harmonia-daemon"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme               = "README.md"

[dependencies]
futures-core        = { workspace = true }
futures-util        = { workspace = true }
harmonia-protocol            = { version = "3.0.0" }
harmonia-store-aterm         = { version = "0.0.0-alpha.0" }
harmonia-store-build-result  = { path = "../harmonia-store-build-result" }
harmonia-store-core          = { version = "0.0.0-alpha.0" }
harmonia-store-path-info     = { path = "../harmonia-store-path-info" }
harmonia-nar        = { version = "3.0.0" }
harmonia-store-db   = { version = "3.0.0" }
harmonia-utils-hash = { version = "0.0.0-alpha.0" }
harmonia-utils-io   = { version = "0.0.0-alpha.0" }
bytes               = { workspace = true }
bzip2               = "0.6"
compress-tools      = "0.15"
libc                = "0.2"
nix                 = { version = "0.31", features = ["user", "fs", "sched", "mount"] }
serde               = { workspace = true }
serde_json          = { workspace = true }
tempfile            = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true, features = ["process"] }
tokio-util          = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

[dev-dependencies]
harmonia-nar = { version = "3.0.0", features = ["test"] }
harmonia-utils-test = { version = "0.0.0-alpha.0" }
tempfile            = { workspace = true }
tokio-test          = "0.4"

[lints]
workspace = true
