[package]
name                 = "harmonia-daemon"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme               = "README.md"

[dependencies]
futures-core                   = { workspace = true }
futures-util                   = { workspace = true }
harmonia-protocol              = { workspace = true }
harmonia-store-content-address = { workspace = true }
harmonia-store-db              = { workspace = true }
harmonia-store-derivation      = { workspace = true }
harmonia-store-path            = { workspace = true }
harmonia-utils-hash            = { workspace = true }
harmonia-utils-io              = { workspace = true }
harmonia-utils-signature       = { workspace = true }
serde                          = { workspace = true }
thiserror                      = { workspace = true }
tokio                          = { workspace = true }
toml                           = { workspace = true }
tracing                        = { workspace = true }
tracing-subscriber             = { workspace = true }

[dev-dependencies]
harmonia-utils-test = { workspace = true }
tempfile            = { workspace = true }

[lints]
workspace = true
