[package]
name                 = "harmonia-daemon"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[dependencies]
bytes                          = { workspace = true }
bzip2                          = "0.6"
compress-tools                 = "0.15"
futures-core                   = { workspace = true }
futures-util                   = { workspace = true }
harmonia-file-nar              = { workspace = true }
harmonia-protocol              = { workspace = true }
harmonia-store-aterm           = { workspace = true }
harmonia-store-build-result    = { workspace = true }
harmonia-store-content-address = { workspace = true }
harmonia-store-db              = { workspace = true }
harmonia-store-derivation      = { workspace = true }
harmonia-store-path            = { workspace = true }
harmonia-store-path-info       = { workspace = true }
harmonia-store-ref-scan        = { workspace = true }
harmonia-utils-hash            = { workspace = true }
harmonia-utils-io              = { workspace = true }
harmonia-utils-signature       = { workspace = true }
libc                           = "0.2"
nix                            = { version = "0.31", features = [ "user", "fs", "sched", "mount" ] }
serde                          = { workspace = true }
serde_json                     = { workspace = true }
tempfile                       = { workspace = true }
thiserror                      = { workspace = true }
tokio                          = { workspace = true, features = [ "process" ] }
tokio-util                     = { workspace = true }
toml                           = { workspace = true }
tracing                        = { workspace = true }
tracing-subscriber             = { workspace = true }

[dev-dependencies]
harmonia-file-nar   = { workspace = true, features = [ "test" ] }
harmonia-utils-test = { workspace = true }
tempfile            = { workspace = true }
tokio-test          = "0.4"

[lints]
workspace = true
