[package]
name                 = "harmonia-file-core"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
tokio.workspace        = true

[dev-dependencies]
