# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-file-nar"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "NAR (Nix ARchive) format packing and unpacking"

[dependencies]
bstr                  = { workspace = true }
bytes                 = { workspace = true }
cap-tokio             = { workspace = true }
derive_more           = { workspace = true }
futures-core          = { workspace = true }
futures-sink          = { workspace = true }
futures-util          = { workspace = true }
harmonia-file-core    = { workspace = true }
harmonia-file-fd      = { workspace = true }
harmonia-file-io-pure = { workspace = true }
harmonia-utils-io     = { workspace = true }
nix.workspace         = true
pin-project-lite      = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true, features = [ "fs", "io-util", "sync" ] }
tokio-util            = { workspace = true, features = [ "io", "io-util" ] }
tracing               = { workspace = true }

[dev-dependencies]
harmonia-utils-test = { workspace = true }
proptest            = { workspace = true }
rstest              = { workspace = true }
tempfile            = { workspace = true }
tokio-test          = { workspace = true }

[features]
test = [  ]

[lints]
workspace = true
