# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-nar"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "NAR (Nix ARchive) format packing and unpacking"
readme               = "README.md"

[dependencies]
bstr              = { workspace = true }
bytes             = { workspace = true }
derive_more       = { workspace = true }
futures-core      = { workspace = true }
futures-sink      = { workspace = true }
futures-util      = { workspace = true }
harmonia-utils-io = { version = "0.0.0-alpha.0" }
nix.workspace     = true
pin-project-lite  = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true, features = [ "fs", "io-util" ] }
tokio-util        = { workspace = true, features = [ "io", "io-util" ] }
tracing           = { workspace = true }
walkdir           = "2.5"

[dev-dependencies]
harmonia-utils-test = { version = "0.0.0-alpha.0" }
proptest            = { workspace = true }
rstest              = { workspace = true }
tempfile            = { workspace = true }
tokio-test          = { workspace = true }

[features]
test = [  ]

[lints]
workspace = true
