# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-protocol"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "Nix daemon wire protocol types and serialization"
readme               = "README.md"

[dependencies]
async-stream     = { workspace = true }
bstr             = { workspace = true }
bytes            = { workspace = true }
derive_more      = { workspace = true }
futures-core     = { workspace = true }
futures-util     = { workspace = true }
libc             = "0.2"
num_enum         = { workspace = true }
pin-project-lite = { workspace = true }
proptest         = { workspace = true, optional = true }
proptest-derive  = { workspace = true, optional = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true, features = [ "io-util" ] }
tokio-util       = { workspace = true, features = [ "io" ] }
tracing          = { workspace = true }

# Internal dependencies
harmonia-nar             = { version = "3.0.0" }
harmonia-protocol-derive = { version = "3.0.0" }
harmonia-store-core      = { version = "0.0.0-alpha.0" }
harmonia-utils-hash      = { version = "0.0.0-alpha.0" }
harmonia-utils-io        = { version = "0.0.0-alpha.0" }
harmonia-utils-test      = { version = "0.0.0-alpha.0", optional = true }

[dev-dependencies]
harmonia-nar        = { version = "3.0.0", features = [ "test" ] }
harmonia-store-core = { version = "0.0.0-alpha.0", features = [ "test" ] }
harmonia-utils-test = { version = "0.0.0-alpha.0" }
hex-literal         = { workspace = true }
proptest            = { workspace = true }
proptest-derive     = { workspace = true }
rstest              = { workspace = true }
tokio-test          = { workspace = true }

[features]
test = [ "proptest", "proptest-derive", "harmonia-utils-test", "harmonia-utils-hash/test" ]

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
