# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name = "harmonia-ssh-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SSH remote store implementation (optional - pending Phase 3 assessment)"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Internal dependencies
harmonia-store-core = { path = "../harmonia-store-core" }
harmonia-protocol = { path = "../harmonia-protocol" }

# SSH dependencies (will be added if imported)
# ssh2 = "0.9"  # Or async-ssh2-tokio

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
