# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name = "harmonia-ssh-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SSH remote store implementation (optional - pending Phase 3 assessment)"
readme = "README.md"

[dependencies]
# SSH dependencies (will be added if imported)
# ssh2 = "0.9"  # Or async-ssh2-tokio

[lints]
workspace = true
