# SPDX-FileCopyrightText: 2025 Amaan Qureshi <contact@amaanq.com>
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-aterm"
version              = "0.0.0-alpha.0"
description          = "Nix ATerm derivation format parser and printer"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme               = "README.md"

[dependencies]
harmonia-store-core  = { version = "0.0.0-alpha.0" }
harmonia-utils-hash  = { version = "0.0.0-alpha.0" }
memchr.workspace     = true
serde_json.workspace = true
thiserror.workspace  = true

[dev-dependencies]
harmonia-utils-test = { version = "0.0.0-alpha.0" }
rstest.workspace    = true

[lints]
workspace = true
