# SPDX-FileCopyrightText: 2025 Amaan Qureshi <contact@amaanq.com>
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-aterm"
version              = "0.0.0-alpha.0"
description          = "Nix ATerm derivation format parser and printer"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme               = "README.md"

[dependencies]
harmonia-store-core  = { workspace = true }
harmonia-store-path  = { workspace = true }
harmonia-utils-hash  = { workspace = true }
memchr.workspace     = true
proptest             = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace  = true

[dev-dependencies]
harmonia-store-aterm = { path = ".", features = [ "test" ] }
harmonia-store-core  = { path = "../harmonia-store-core", features = [ "test" ] }
harmonia-utils-test  = { workspace = true }
rstest.workspace     = true

[features]
test = [ "proptest", "harmonia-store-core/test" ]

[lints]
workspace = true
